--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,6 +3,9 @@
 // ==============================================
 
 $standart-text-color: #16191d;
+$active-task-text-color: #F89B11;
+$done-task-text-color: #134EC1;
+
 
 // ==============================================
 // ===================  Sizes  ==================
