--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -3,7 +3,6 @@
 
 // Vela Sans
 @font-face {
-  font-family: 'Vela Sans';
-  src: url('../fonts/VelaSans-Regular.ttf') format('ttf');
-  font-weight: 400;
+   font-family: 'Vela Sans';
+   src: url('/src/assets/fonts/VelaSans-Regular.ttf') format('ttf')
 }
