--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -7,5 +7,6 @@
    padding: 0 20px;
    margin: 0 auto;
    position: relative;
-   color: $standart-text-color;
+   // color: $standart-text-color;
+   // color: $active-task-text-color;
 }
