--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -3,6 +3,6 @@
 
 // Vela Sans
 @font-face {
-   font-family: 'Vela Sans';
-   src: url('/src/assets/fonts/VelaSans-Regular.ttf') format('ttf')
+   font-family: 'VelaSans';
+   src: url('/src/assets/fonts/VelaSans-GX.ttf') format('ttf');
 }
