--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,12 +1,12 @@
 @import '@/assets/scss/_normalize.scss';
 @import '@/assets/scss/_fonts.scss';
 @import '@/assets/scss/_variables.scss';
+@import '@/assets/scss/_templates.scss';
 
 .container {
    max-width: $container-width;
+   height: 2000px;
    padding: 0 20px;
    margin: 0 auto;
-   position: relative;
-   // color: $standart-text-color;
-   // color: $active-task-text-color;
+   color: $standart-text-color;
 }
