--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,6 +6,7 @@ $standart-text-color: #16191d;
 $active-task-text-color: #F89B11;
 $done-task-text-color: #134EC1;
 $placeholder-text-color: #C4C4C4;
+$accent-background-color: #f6f9ff;
 
 // ==============================================
 // ===================  Sizes  ==================
