--- a/src/assets/scss/_templates.scss
+++ b/src/assets/scss/_templates.scss
@@ -6,3 +6,10 @@
    font-size: 14px;
    line-height: 132%;
 }
+%styleTitleText {
+   font-family: 'Montserrat', sans-serif;
+   font-style: normal;
+   font-weight: 700;
+   line-height: 132%;
+   color: $standart-text-color;
+}
